# server

./: .dockerignore  .gitignore  Dockerfile  comands.md  docker-compose.yml  pyproject.toml  readme.md  start.sh
.github/workflows/: deploy.yml  develop.yml  main.yml
alembic/: env.py
alembic/versions/: 055625bfb05e_initial_migration.py  07e73a8835c2_add_name_in_chats_and_time_data.py  0be92f442172_initial_migration.py  5270fa094859_init.py  57e889b8d8a2_initial_migration.py  7eb63797855d_initial_migration.py  9de5b77c2e92_autogenerate.py  fbe3bdda4e8e_add_feedback_user_relationship.py  fcff22e269a7_add_feedback_table.py
app/: main.py
app/chatbot/: __init__.py  chatbot.py  data_handler.py  langchain.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  auth_config.py  constants.py  context.py  decorators.py  dependencies.py  env_config.py  lifespan_config.py  logger_config.py  router_scanner.py  setting_config.py  settings.py  settings2.py  swagger_config.py
app/crud/: __init__.py  auth_crud.py  base_crud.py  character_crud.py  character_relationship_crud.py  chat_crud.py  chat_log_crud.py  default_image_crud.py  feedback_crud.py  relationship_crud.py  user_crud.py
app/database/: __init__.py  base.py  database_manager.py
app/db/: __init__.py  database.py  database_session.py
app/exceptions/: __init__.py  auth_exceptions.py  base_exception.py  default_image_exception.py  exceptions.py  user_exceptions.py
app/mappers/: __init__.py  character_mapper.py  chat_log_mapper.py  chat_mapper.py  default_image_mapper.py  feedback_mapper.py  relationship_mapper.py  user_mapper.py
app/models/: __init__.py  base.py  character_relationships.py  characters.py  chat_logs.py  chats.py  default_images.py  enums.py  feedbacks.py  images.py  relationships.py  user.py  users.py
app/schemas/: __init__.py  error_schema.py  response_schema.py
app/services/: __init__.py  auth_service.py  character_service.py  chat_log_service.py  chat_service.py  chatting_service.py  chatting_session_service.py  default_image_service.py  feedback_service.py  relationship_service.py  user_service.py
app/templates/: chatting.html
app/utils/: __init__.py  aws_manager.py  constants.py  google_api_util.py  health_check.py  jwt_util.py  password_hasher.py  s3_util.py  socket_connection_manager.py  socket_handler.py  socket_room_manager.py
docs/: Alembic.md  admin_page.md
scripts/: deploy-dev.sh  deploy-prod.sh  deploy.sh  deploy_prod.sh  discord_message.sh  health-check.sh  health_check.sh  update-version.sh  update_version.sh
tests/: conftest.py
tests/crud/: test_auth_crud.py  test_user_crud.py  user_crud.py
tests/database/: database_manager.py
(+105 files in other folders)
