[tool.poetry]
name = "server-v2"
version = "0.1.0"
description = ""
authors = ["MinkyoDev <isakin.tyrfing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi-slim = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
fastapi-camelcase = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
