[tool.poetry]
name = "emogi"
version = "1.0.7"
description = ""
authors = ["MinkyoDev <minkyo.dev@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi-slim = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
fastapi-camelcase = "^2.0.0"
pyjwt = "^2.9.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}
passlib = "^1.7.4"
bcrypt = "4.0.1"
boto3 = "^1.35.71"
langchain-google-genai = "^2.0.6"
python-multipart = "^0.0.18"
psutil = "^6.1.0"
langchain-openai = "^0.2.12"
langchain-upstage = "^0.4.0"
langchain = "^0.3.12"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."